--- a/public/argon/assets/css/argon-dashboard.css
+++ b/public/argon/assets/css/argon-dashboard.css
@@ -24754,42 +24754,42 @@ pre[class*=language-] {
 /*
  * Container style
  */
-.ps {
+/* .ps {
   overflow: hidden !important;
   overflow-anchor: none;
   -ms-overflow-style: none;
   touch-action: auto;
   -ms-touch-action: auto;
-}
+} */
 
 /*
  * Scrollbar rail styles
  */
-.ps__rail-x {
+/* .ps__rail-x {
   display: none;
   opacity: 0;
   transition: background-color 0.2s linear, opacity 0.2s linear;
   -webkit-transition: background-color 0.2s linear, opacity 0.2s linear;
   height: 15px;
-  /* there must be 'bottom' or 'top' for ps__rail-x */
+  
   bottom: 0px;
-  /* please don't change 'position' */
-  position: absolute;
-}
 
-.ps__rail-y {
+  position: absolute;
+} */
+
+/* .ps__rail-y {
   display: none;
   opacity: 0;
   transition: background-color 0.2s linear, opacity 0.2s linear;
   -webkit-transition: background-color 0.2s linear, opacity 0.2s linear;
   width: 15px;
-  /* there must be 'right' or 'left' for ps__rail-y */
+ 
   right: 0;
-  /* please don't change 'position' */
-  position: absolute;
-}
 
-.ps--active-x > .ps__rail-x,
+  position: absolute;
+} */
+
+/* .ps--active-x > .ps__rail-x,
 .ps--active-y > .ps__rail-y {
   display: block;
   background-color: transparent;
@@ -24802,9 +24802,9 @@ pre[class*=language-] {
 .ps--scrolling-x > .ps__rail-x,
 .ps--scrolling-y > .ps__rail-y {
   opacity: 0.6;
-}
+} */
 
-.ps .ps__rail-x:hover,
+/* .ps .ps__rail-x:hover,
 .ps .ps__rail-y:hover,
 .ps .ps__rail-x:focus,
 .ps .ps__rail-y:focus,
@@ -24812,34 +24812,33 @@ pre[class*=language-] {
 .ps .ps__rail-y.ps--clicking {
   background-color: #eee;
   opacity: 0.9;
-}
+} */
 
 /*
  * Scrollbar thumb styles
  */
-.ps__thumb-x {
+/* .ps__thumb-x {
   background-color: #aaa;
   border-radius: 6px;
   transition: background-color 0.2s linear, height 0.2s ease-in-out;
   -webkit-transition: background-color 0.2s linear, height 0.2s ease-in-out;
   height: 6px;
-  /* there must be 'bottom' for ps__thumb-x */
-  bottom: 2px;
-  /* please don't change 'position' */
-  position: absolute;
-}
 
-.ps__thumb-y {
+  bottom: 2px;
+ 
+  position: absolute;
+} */
+
+/* .ps__thumb-y {
   background-color: #aaa;
   border-radius: 6px;
   transition: background-color 0.2s linear, width 0.2s ease-in-out;
   -webkit-transition: background-color 0.2s linear, width 0.2s ease-in-out;
-  width: 6px;
-  /* there must be 'right' for ps__thumb-y */
+  
   right: 2px;
-  /* please don't change 'position' */
+ 
   position: absolute;
-}
+} */
 .multisteps-form__panel{
   background-color:transparent!important;
   border-color:hsla(0,0%,100%,.15)!important;
@@ -24859,7 +24858,7 @@ pre[class*=language-] {
     border:none;
     background-color:transparent;
     outline:none!important;
-    cursor:pointer}
+    cursor:pointer;}
     
     @media (min-width:500px){
       .multisteps-form__progress-btn{
@@ -24889,7 +24888,7 @@ pre[class*=language-] {
             transition-delay:0s;
             display:block;
             width:100%;
-            height:2px;
+            /* height:2px; */
             content:"";
             background-color:currentColor;
             z-index:1}
@@ -24908,7 +24907,7 @@ pre[class*=language-] {
                   top:0;
                   left:0;
                   width:100%;
-                  height:0;
+                  /* height:0; */
                   opacity:0;
                   visibility:hidden
                 }
@@ -24923,29 +24922,11 @@ pre[class*=language-] {
                       transition-duration:.2s;
                       transition-timing-function:linear;
                       transition-delay:0s;
-                      transform:scale(1)}
-.ps__rail-x:hover > .ps__thumb-x,
-.ps__rail-x:focus > .ps__thumb-x,
-.ps__rail-x.ps--clicking .ps__thumb-x {
-  background-color: #999;
-  height: 11px;
-}
+                      transform:scale(1);
+                    }
 
-.ps__rail-y:hover > .ps__thumb-y,
-.ps__rail-y:focus > .ps__thumb-y,
-.ps__rail-y.ps--clicking .ps__thumb-y {
-  background-color: #999;
-  width: 11px;
-}
 
-/* MS supports */
-@supports (-ms-overflow-style: none) {
-  .ps {
-    overflow: auto !important;
-  }
-}
-@media screen and (-ms-high-contrast: active), (-ms-high-contrast: none) {
-  .ps {
-    overflow: auto !important;
-  }
-}
+
+
+
+
