--- a/public/argon/assets/css/argon-dashboard.css
+++ b/public/argon/assets/css/argon-dashboard.css
@@ -9417,6 +9417,10 @@ textarea.form-control-lg {
   color: #fff !important;
 }
 
+form#logout-form a.nav-link.text-white.font-weight-bold i.ni {
+    color: #fff;
+    vertical-align: middle;
+}
 .text-body {
   color: #67748e !important;
 }
@@ -22928,6 +22932,17 @@ hr.horizontal.gray-light {
     max-width: 30rem;
   }
 }
+@media (max-width:991px){
+	.table-responsive table.table.align-items-center tr th, .table-responsive table.table.align-items-center tr td {
+		text-align: left !important;
+		padding: 0.5rem 0.5rem;
+	}
+	.card-body.px-0.pt-0.pb-2.restb {
+		padding-left: 1.5rem !important;
+		padding-right: 1.5rem !important;
+	}
+}
+
 
 .timeline-one-side .timeline-block:nth-child(even) .timeline-content {
   float: none;
@@ -25035,4 +25050,41 @@ pre[class*=language-] {
         }
 	
 
+}
+
+
+@media (max-width: 1199.98px){
+	.table-responsive table.table.align-items-center tr th,
+	.table-responsive table.table.align-items-center tr td {
+		font-size: 13px !important;
+	}
+	.navbar-vertical.navbar-expand-xs.fixed-start {
+		left: inherit;
+		right: 0;
+		margin-right: 1.5rem;
+		margin-top: 1rem;
+	}
+	.g-sidenav-show:not(.rtl) .sidenav {
+		transform: translateX(17.125rem);
+	}
+	.g-sidenav-show.g-sidenav-pinned .sidenav {
+    transform: translateX(0);
+	}
+	.navbar .nav-link span.d-sm-inline.d-none {
+		display: inline-block !important;
+	}
+	.navbar-vertical.navbar-expand-xs {
+		width: 210px;
+		transition: 0.5s;
+	}
+	.main-content {
+		transition: 0.5s;
+	    width: 100%;
+}
+	body.g-sidenav-pinned main.main-content.border-radius-lg.ps {
+		margin-right: 235px;
+		position: absolute;
+		width: 100%;
+		right: 0;
+	}
 }
