--- a/public/argon/assets/css/argon-dashboard.css
+++ b/public/argon/assets/css/argon-dashboard.css
@@ -74,11 +74,19 @@ img.logout_icon {
 ul.navbar-nav.ms-md-auto.pe-md-3.d-flex.justify-content-end {
     padding-right: 0 !important;
 }
+
+nav.navbar.navbar-main.navbar-expand-lg.px-0.mx-4.shadow-none.border-radius-xl {
+    padding-bottom: 0;
+    margin-bottom: -5px;
+}
+.navbar-main .container-fluid {
+    padding: 0;
+}
 h3.site_title_desktop {
     color: #fff;
-    font-weight: 700;
-    font-size: 14px;
-    line-height: 21px;
+    font-weight: 600;
+    font-size: 20px;
+    line-height: 28px;
     margin-bottom: 0;
     padding: 0;
 }
@@ -19644,7 +19652,8 @@ form#logout-form a.nav-link.text-white.font-weight-bold i.ni {
 }
 /*-- New css 07-03 --*/
 .card.mb-4 {
-    min-height: calc(100vh - 195px);
+    min-height: calc(100vh - 145px);
+    margin-bottom: 0 !important;
 }
 .reservation_list_data {
         display: flex;
@@ -25140,7 +25149,7 @@ h3.Boarding-phone {
     width: 100%;
     font-size: 18px;
     color: #fff;
-    font-weight: 500;
+    font-weight: 600;
     margin-bottom: 0;
     letter-spacing: 0;
     margin-top: 5px;
